@@ -1,6 +1,9 @@
 package io.github.abbassizied.sms.mappers;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
+
 import org.mapstruct.Mapper;
 
 import io.github.abbassizied.sms.dtos.responses.ImageResponse;
@@ -11,17 +14,12 @@ public interface ImageMapper {
 
 	ImageResponse toImageResponse(Image image);
 
-	// Let MapStruct handle the collection mapping automatically
-	List<ImageResponse> toImageResponseList(List<Image> images);
-
-	/*
-	 * default List<ImageResponse> imageListToImageResponseList(List<Image> images)
-	 * {
-	 * if (images == null) {
-	 * return List.of();
-	 * }
-	 * return images.stream().map(this::toImageResponse).toList();
-	 * }
-	 */
+	// Return ArrayList instead of List.of()
+	default List<ImageResponse> toImageResponseList(List<Image> images) {
+		if (images == null) {
+			return new ArrayList<>(); // Use ArrayList instead of List.of()
+		}
+		return images.stream().map(this::toImageResponse).collect(Collectors.toList()); // This returns ArrayList
+	}
 
 }
